fix: firefox z-index

--- a/pizza-builder/src/components/AddPanel/AddPanel.sass
+++ b/pizza-builder/src/components/AddPanel/AddPanel.sass
@@ -3,6 +3,7 @@
     display: flex
     flex-grow: 2
     overflow: visible
+    z-index: 2
 
     &__tabs
         flex-grow: 0.6
