--- a/pizza-builder/src/components/IngredientDispencer/IngredientDispencer.sass
+++ b/pizza-builder/src/components/IngredientDispencer/IngredientDispencer.sass
@@ -6,6 +6,7 @@
     justify-content: space-between
     order: -1
     overflow: visible
+    z-index: 3
 
     &__plate
         background-color: #fff
